fixed button position bug on safari

--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ article {
 .share-button-inverted {
   position: absolute;
   bottom: 1rem;
+  right: 2rem;
   background-color: var(--clr-neutral-600) !important;
 }
 .share-button:hover {
